se agrega un breve descripcion del ejercicio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <p class="name"></p>
     <p class="blog"></p>
-    <p class="location"></p>
+    <p class="location"></p> <!-- se agrega parrafo con clase "location"-->
 
 
   <script src="./assets/js/app.js"></script>
